--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - checkout
       - run: echo "A first hello"
-      - run: sleep 25
+      - rspec -P test/helpers/*.rb
   two:
     docker:
       - image: circleci/ruby:2.4.1
@@ -19,4 +19,3 @@ workflows:
   one_and_two:
     jobs:
       - one
-      - two
