--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,16 @@
 version: 2
 jobs:
-  one:
+  build:
+    working_directory: ~/first
     docker:
       - image: circleci/ruby:2.4.5
-    steps:
-      - checkout
-      - run: echo "A first hello"
-      - rspec -P test/helpers/*.rb
-  two:
-    docker:
-      - image: circleci/ruby:2.4.1
-    steps:
-      - checkout
-      - run: echo "A more familiar hi"
-      - run: sleep 15
-workflows:
-  version: 2
-  one_and_two:
-    jobs:
-      - one
+      environment:
+        RAILS_ENV: test
+  steps:
+    - checkout
+
+    # Setup the environment
+    - run: cp .sample.env .env
+
+    # Run the tests
+    - run: bundle exec rake
