--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/first
+    working_directory: '~/first'
     docker:
       - image: circleci/ruby:2.4.5
       environment:
