--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,4 +9,11 @@ jobs:
     steps:
       - checkout
       - run: echo "A first hello"
-      - run: rake     
+      - run: cp .sample.env .env
+      - run:
+        name: Configure Bundler
+        command: |
+          echo 'export BUNDLER_VERSION=$(cat Gemfile.lock | tail -1 | tr -d " ")' >> $BASH_ENV
+          source $BASH_ENV
+          gem install bundler 
+          
