--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,5 +15,6 @@ jobs:
             echo 'export BUNDLER_VERSION=$(cat Gemfile.lock | tail -1 | tr -d " ")' >> $BASH_ENV
             source $BASH_ENV
             gem install bundler 
+            bundle install
             rake
 
